--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -20,11 +20,15 @@ body{
   border: white solid 2px;
   border-radius: 10px;
   height: 150px;
-  width: 200px;
+  width: 250px;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.card:hover{
+  border: rgb(34, 255, 0) solid 2px;
+
 }
 .card p {
   position: absolute;
@@ -32,4 +36,5 @@ body{
 }
 .card img {
   height: 100%;
+  width: 100%;
 }
